# arduino-joystick

joystick-daemon/: Cargo.toml  shell.nix
joystick-daemon/src/: flightgear.rs  main.rs
joystick-daemon/src/serial/: mod.rs
joystick-firmware/: joystick-firmware.ino
